--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,24 +1,19 @@
 .navbar {
-    height: 3rem;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    display: flex;
-    position:absolute;
-    bottom: 0;
-    width: 100%;
-    font: italic  9px/1em Arial, Verdana, Helvetica;
-    background-color: rgb(243, 242, 242);
-    align-items: center;
-    
-  }
+  height: 3rem;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  font: italic 9px/1em Arial, Verdana, Helvetica;
+  background-color: rgb(243, 242, 242);
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center the text horizontally */
+  position: relative; /* Ensure it's positioned relative to its container */
+}
 
-  .text{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin: 0;
-    padding: 10px;
-  }
-
- 
+.text {
+  margin: 0;
+  padding: 10px;
+  right: 0;
+  position: absolute;
+}
